--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_content_section.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_content_section.html
@@ -11,7 +11,7 @@
 <section class="post-header-section">
     <div class="profile-pic">
         {%if post.user_profile.profile_pic.name %}
-        <a href="{%url 'posts-by-user' post.author%}"><img src="{{ post.user_profile.profile_pic.url }}"
+        <a href="{%url 'user-posts-page' post.author%}"><img src="{{ post.user_profile.profile_pic.url }}"
                 width="500"></a>
         {% endif %}
         <!-- <img src="{{ post.user_profile.profile_pic.url }}" width="500"> -->
