--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/game_specific_stats/lol_stats.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/game_specific_stats/lol_stats.html
@@ -1,6 +1,6 @@
 {%for g in selected_gamer_profiles%}
 <div>
-    <div class="game_name" style="display: none;">{{g.game}}</div>
+    <div class="game_display_name" style="display: none;">{{g.game}}</div>
     <div class="game_stat">
         <span class="label"><i class="fa-solid fa-ranking-star"></i>Rank:</span>
         <span>
