Fixed position sticky issues ( solved by setting min-height of page-contents)

--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/sidebar_user_profile.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/sidebar_user_profile.html
@@ -1,4 +1,4 @@
-<div class="sidebar user_profile_sidebar">
+<div class="sidebar community-sidebar">
     <div class="profile_user" style="display: none;">
         {{ profile.user.username }}
     </div>
